# screencap

./: CMakeLists.txt  README.md
schemas/: output.json
src/: capture.h  capture_dxgi.cpp  capture_gdi.cpp  capture_wgc.cpp  cli.cpp  cli.h  common.h  crop.cpp  crop.h  encode_wic_png.cpp  encode_wic_png.h  image_stats.cpp  image_stats.h  logging.cpp  logging.h  main.cpp  monitor_enum.cpp  monitor_enum.h  util.cpp  window_enum.cpp  window_enum.h
